--- a/MasterPage.master
+++ b/MasterPage.master
@@ -5,7 +5,11 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head runat="server">
     <title></title>
-    <asp:ContentPlaceHolder id="head" runat="server">
+
+    <link rel="stylesheet" href="StyleSheet.css" />
+    <script src="jquery/jquery.min.js"></script>
+   
+     <asp:ContentPlaceHolder id="head" runat="server">
     </asp:ContentPlaceHolder>
 </head>
 <body>
